<resources>
    <string name="app_name">Shop\'List·e</string>
    <string name="main_fragment">MainFragment</string>
    <string name="add_art_btn">Add Item</string>
    <string name="add_art_msg">Add a new item</string>
    <string name="add_art_prmpt_msg">What item do you want to add?</string>
    <string name="add_art_prmpt_title">Add a new Item</string>
    <string name="add_art_prmpt_add">\"Item to add: \"</string>
    <string name="prmpt_cancel">Cancel</string>
    <string name="edit_art_prmpt_msg">What do you want to modify?</string>
    <string name="edit_art_prmpt_title">Edit an Item</string>
    <string name="del_art">Delete</string>
    <string name="art_details">Edit Item</string>
    <string name="edit_button">Edit…</string>
    <string name="sort_articles">Sort…</string>
    <string name="empty_shopping_list">Empty shopping list…</string>
    <string name="usual_arts">Usual List</string>
    <string name="clear_checked">Clear checked…</string>
    <string name="undo">UNDO</string>
    <string name="shopping_list">Shopping List</string>
    <string name="empty_usual_list">Empty Usual List…</string>
    <string name="pls_non_empty">Please enter a non-empty value</string>
    <string name="add">Add</string>
    <string name="article">Article</string>
    <string name="category">Categories</string>
    <string name="art_head">Article :</string>
    <string name="cat_head">Category :</string>
    <string name="divers_cat">Miscellaneous</string>
    <string name="art_qty">Quantity :</string>
    <string name="default_art_nb">1</string>
    <string name="art_det_dial_title">Article details</string>
    <string name="ok">OK</string>
    <string name="del_all_title">Delete All</string>
    <string name="del_all_msg">Are you sure you want to delete every entry?</string>
    <string name="confirm">Confirm</string>
    <string name="del_chk_title">Delete Checked</string>
    <string name="del_chk_msg">Are you sure you want to delete all checked items?</string>
    <string name="manage_categories">Category List</string>
    <string name="manage_cat_title">Manage Categories</string>
    <string name="empty_category_list">Delete Unused Categories…</string>
    <string name="category_hint">Category</string>
    <string name="new_cat_title">Add a New Category</string>
    <string name="new_cat_msg">What category do you want to add?</string>
    <string name="entry_already_exists">Entry already exists!</string>
    <string name="cat_used_toast">Cannot delete: Category used in the shopping list</string>
    <string name="cant_del_used_cat">Cannot delete categories used by another list</string>
    <string name="edit_cat_title">Edit Category</string>
    <string name="is_not_int">Quantity is not valid!</string>
    <string name="usual_list_title">Usual Item List</string>
    <string name="already_in_slist_title">Item also exists in Shopping List</string>
    <string name="already_in_slist_msg">Update item in Shopping List too?</string>
    <string name="art_put_in_slist">Item placed in the shopping list</string>
    <string name="art_del_from_slist">Item removed from shopping list</string>
    <string name="no">No</string>
    <string name="sort_bycat_button">By category</string>
    <string name="sort_byitem_button">By item</string>
    <string name="add_all_to_shopping_list">Add list to Shopping List</string>
    <string name="already_all_in_slist">There is no item left to put in the Shopping List</string>
    <string name="item_put_in_cart">Item put in cart</string>
    <string name="item_del_from_cart">Item removed from cart</string>
    <string name="yes">Yes</string>
    <string name="cat_fragment">CategoryFragment</string>
    <string name="usual_fragment">UsualFragment</string>
    <string name="drawer_fragment">Drawer Fragment</string>
    <string name="edit_cat_message">Replace category name with:</string>
    <string name="cant_del_all_used">All categories are currently used in another list</string>
    <string name="prmpt_del_unused_title">Delete All Unused</string>
    <string name="prmpt_del_unused_msg">Are you sure you want to delete every unused category?</string>
    <string name="back_to_shopping_list">&lt; Back to Shopping List</string>
    <string name="cant_propagate">Can\'t propagate: updated item already exists in the Shopping List</string>
    <string name="send_list_via_sms">Send Unchecked via SMS…</string>
    <string name="sens_sms_title">Send via SMS?</string>
    <string name="sens_sms_msg">You are going to be redirected to your SMS app</string>
    <string name="sms_no_data_to_send">No data to send!</string>
    <string name="sort_custom">Custom sort</string>
    <string name="sort_alpha">Alphabetically</string>
    <string name="warning_activate_custom">Sorting alphabetically. To enable drag and drop, choose Custom Sort</string>
    <string name="dismiss_snackbar">DISMISS</string>
    <string name="item_deleted_info">Item %1$s has been deleted</string>
    <string name="cat_deleted_info">Category %1$s has been deleted</string>
    <string name="language">Language</string>
    <string name="en_lg_title">EN</string>
    <string name="fr_lg_title">FR</string>
    <string name="shopping_tutorial"><![CDATA[<p><b><h4>This is where you type your next shopping list.</h4></b></p>
<h6>Add/Edit an item</h6><p>To <b>add</b> an item, tap the (movable) <b>+</b> button in the bottom right corner.</p>
<p>Alternatively, if you plan to buy an item on a regular basis, be sure to type it in the <b><u>Usual List</u></b>, accessible from the top menu. From there, you can add your usual items to your shopping list whenever you want just by checking them.</p>
 <p>To modify an item, tap the <b>Edit</b> button.</p><br>
<h6>Category List</h6><p>An item is bound to a category (i.e. store section). By default, items are <b>sorted by category</b>, each displayed in the same order as your category list.<br>
You can create a category <b>on the fly</b>, by directly typing its name in the item creation/edit dialog, or in the <b><u>Category List</u></b>, accessible from the top menu. Go there to put the categories in the <b>same order</b> as your store\'s sections!</p><br>
<h6>Check/delete items</h6><p>While shopping, <b>check</b> the items you\'ve added to your cart to clearly see what\'s left to look for. You can then choose to <b>Clear checked</b> items from your list. Alternatively, you can directly <b>swipe</b> an item to remove it.</p><br>
<h6>Send via SMS</h6><p>If you couldn\'t manage to buy everything you wanted, feel free to use the top menu to <b>send your unchecked items by SMS</b> to your rescuer.</p>]]></string>
    <string name="category_tutorial"><![CDATA[<p><b><h4>This is where you type the categories your items are bound to.</h4></b></p>
<h6>Add/Edit a category</h6><p>Tap the <b>+</b> button in the bottom right corner to add a category. Tap the <b>Edit</b> button to modify a category.</p><br>
<h6>Sort categories</h6><p>By default, the <b>sorting type</b> is Custom, which means you can <b>drag and drop</b> your categories to match the order in your favorite store!
To do so, keep you finger pressed against a category: when the latter is colored, you can drag it and release it where you want.</p><br>
<h6>Delete categories</h6><p>From the options menu, you can <b>Delete unused categories</b>. Alternatively, you can <b>swipe</b> a category to delete it.<br>
<b>Note</b> that if a category is used by an item in another list, it cannot be deleted.</p>]]></string>
    <string name="usual_tutorial"><![CDATA[<p><b><h4>This is where you type the items you intend to buy on a regular basis.</h4></b></p>
<h6>It gets easier!</h6><p>This screen is similar to the shopping list, but here, when you <b>check</b> an item, it is <b><u>added to your shopping list</u></b>.</p>
<p><b>Uncheck</b> an item to remove it from the shopping list.</p><br>
<h6>Add/delete all items</h6><p>From the options menu, you can choose to <b>add all the usual items</b> to your shopping list, or <b>empty the Usual List</b>.</p>]]></string>
    <string name="help_title">Help</string>
    <string-array name="unit_array">
        <item></item>
        <item>kg</item>
        <item>g</item>
        <item>pack(s)</item>
        <item>L</item>
        <item>mL</item>
    </string-array>
    <string-array name="pre_pop_cat">
        <item>Misc.</item>
        <item>Fruits &amp; Vegetables</item>
        <item>Meat</item>
        <item>Fish</item>
        <item>Bakery</item>
        <item>Refrigerated Food</item>
        <item>Frozen Food</item>
        <item>Dried Fruits, Nuts &amp; Seeds</item>
        <item>Biscuits</item>
        <item>Sweets</item>
        <item>Cereals</item>
        <item>Tins, Cans</item>
        <item>Cooking Ingredients</item>
        <item>World Food</item>
        <item>Health &amp; Beauty</item>
        <item>Desserts</item>
        <item>Pets</item>
        <item>Household</item>
        <item>DIY</item>
        <item>Home</item>
        <item>Baby</item>
        <item>Snacks</item>
        <item>Garden &amp; Outdoor</item>
        <item>Entertainment</item>
        <item>Drinks</item>
    </string-array>
    <string-array name="pre_pop_item">
        <item>Wholegrain bread</item>
        <item>Bakery</item>
        <item>500 g</item>
    </string-array>
</resources>