<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/action_usual_items"
        android:orderInCategory="11"
        android:title="@string/usual_arts"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort_articles"
        android:orderInCategory="12"
        android:title="@string/sort_articles"
        app:showAsAction="ifRoom" >
        <menu>
            <item
                android:id="@+id/action_sort_by_cat"
                android:orderInCategory="1"
                android:title="@string/sort_bycat_button"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_sort_by_item"
                android:orderInCategory="2"
                android:title="@string/sort_byitem_button"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/action_manage_cat"
        android:orderInCategory="15"
        android:title="@string/manage_categories"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sens_sms"
        android:orderInCategory="25"
        android:title="@string/send_list_via_sms"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_empty_list"
        android:orderInCategory="30"
        android:title="@string/empty_shopping_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_checked"
        android:orderInCategory="79"
        android:title="@string/clear_checked"
        app:showAsAction="never" />

    <item
        android:id="@+id/shopping_help_menu"
        android:title="@string/help_title"
        android:orderInCategory="99"
        app:showAsAction="never" />


</menu>